styles/style.css
/***Fonts***/
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');

/***Color Scheme***/
:root {
    --accent-color:#23ae95;
    --bg-light-color:#2b3b37;
    --bg-md-color:#15231f;
    --bg-dark-color:#091512;
    --text-light-color:#fff;
    --text-dark-color:#354B45;
}

body {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Roboto', Helvetica, sans-serif;
    line-height: 1.5em;
    letter-spacing: 1px;
    background-color: var(--bg-dark-color);
    color: var(--text-light-color);
    overflow: auto;
    scrollbar-width: none;
    -ms-overflow-style: none; 
}

body::-webkit-scrollbar {
    display: none;
}

ul {
    list-style-type: none;
    padding: 0;
}

a, a:active, a:visited {
    color: inherit;
    text-decoration: none;
}

.header {
    font-size: 1rem;
}

.title{
    margin-left: 1em;
    font-size: 2em;
    font-weight: 700;
}

.search-bar {
    background-color: var(--bg-light-color);
    display: flex;
    align-items: center;
    justify-content: center;
    padding: .5em;
}

.search-bar > svg {
    font-size: 1.5em;
}

.search-box {
    position: relative;
    display: inline-block;
    margin-left: 1em;
}

#search-field {
    border-radius: 15px;
    height: 3em;
    width: 50vw;
    max-width: 300px;
    font-size: 0.8em;
    padding: .2em 1em;
}

.search-dropdown {
    position: absolute; 
    z-index: 1;   
    margin-top: 1px;
    width: 95%;
    left: 3%;
    background-color: var(--bg-md-color);
    overflow-y: scroll;
    max-height: 40vh;
    cursor: pointer;
}

.search-dropdown::-webkit-scrollbar{
    background-color: var(--bg-md-color);
    width: 1em;
}

.search-dropdown::-webkit-scrollbar-thumb{
    background-color: var(--accent-color);
    border-radius: 10px;
}

.search-dropdown::-webkit-scrollbar-thumb:hover{
    opacity: .8;
}

.movie-list {
    padding: 0;
    margin: .5em 0 0 0;
}

.movie-list-item {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    margin-bottom: .5em;
}

#thumbnail {
    width: 40%;
    max-width: 100px;
}

.movie-info {
    width: 40%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: .5em 0;
}

.movie-info > p {
    margin: 0 0 .4em 0;
}

#movie-title {
    font-weight: 600;
}

#movie-year {
    color: var(--accent-color);
}

.main-area {
    width: 100%;
    max-width: 1500px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    font-size: 1rem;
    font-weight: 300;
}

#movie-poster{
    max-height: 40vh;
    margin-block: 1em;
    margin-left: 1em;
    border: 5px solid white;
    border-radius: 10px;
}

.movie-details{
    width: 80%;
    margin: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 1em;
}

#title {
    font-size: 2em;
    font-weight: 700;
    text-align: center;
    color: var(--accent-color);
}

.movie-misc-details{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 0;
    padding-inline: 5%;
}

#genre {
    margin-bottom: 1em;
    padding: .5em;
    background-color: var(--bg-light-color);
    border-radius: 5px;
}


.movie-misc-details > #scores {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 60%;
}

.movie-misc-details > #scores > span{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin: .5em;
}

.movie-misc-details > #scores > span > span{
    margin: 0.2em;
}

.movie-details-text {
    text-align: left;
    margin: 0.5em;
    padding-inline: 1em;
    width: 80%;
}

#language {
    color: var(--accent-color);
}

#awards {
    display: flex;
    align-items: center;
}

#awards > svg {
    color: var(--accent-color);
    margin-right: 1em;
}

/*** Utility ***/

.hidden {
    display: none;
}

/*** Media Queries ***/

@media screen and (min-width: 850px) {
    .header {
        font-size: 1rem;
    }
    
    .main-area {
        width: 95%;
        margin: auto;
        flex-direction: row;
        align-items: flex-start;
        justify-content: space-around;
        margin-top: 2em;
        font-size: 1rem;
    }

    #movie-poster {
        max-height: none;
        max-width: 500px;
        width: 25%;
        margin: 0;
    }

    .movie-details {
        width: 75%;
    }

    .movie-basic-details {
        display: flex;
        justify-content: space-evenly;
        width: 90%;
        margin-inline: auto;
    }

    .movie-details-text {
        width: 100%;
    }
}

